# pyjobby

./: README.md  mypy.ini  pyproject.toml  sample.conf.py
priv/: schema.py  schema.sql
pyjobby/: __init__.py  configloader.py  pj.py
